# Adlam-and-Nko

django_adlamandnko/: pyproject.toml
django_adlamandnko/django_adlamandnko/: db.sqlite3  manage.py
django_adlamandnko/django_adlamandnko/adlamandnko_app/: apps.py  forms.py  models.py  urls.py  views.py
django_adlamandnko/django_adlamandnko/adlamandnko_app/migrations/: 0001_initial.py
django_adlamandnko/django_adlamandnko/adlamandnko_app/static/adlamandnko_app/css/: style.css
django_adlamandnko/django_adlamandnko/adlamandnko_app/static/adlamandnko_app/images/: nko.jpg_large
django_adlamandnko/django_adlamandnko/adlamandnko_app/static/adlamandnko_app/js/: annotate.js  base.js  keyboard.js  keyboardInit.js
django_adlamandnko/django_adlamandnko/adlamandnko_app/templates/adlamandnko_app/: about_adlam.html  about_nko.html  annotate.html  base.html  home.html
django_adlamandnko/django_adlamandnko/adlamandnko_app/templates/users/: login.html  logout.html  profile.html  register.html
django_adlamandnko/django_adlamandnko/adlamandnko_app/templatetags/: custom_tags.py
django_adlamandnko/django_adlamandnko/django_adlamandnko/: asgi.py  settings.py  urls.py  wsgi.py
django_adlamandnko/django_adlamandnko/users/: forms.py  urls.py  views.py
llm training/cleaned_data/: cleaned_articles.json  merges.txt  tokenized_samples.json  tokenizer.json
llm training/notebooks/: analysis.ipynb  llm_training.ipynb  texts.txt
scrapping/cleaned_data/: cleaned_data.csv  tokenized_articles.pt  tokenized_samples.json  vocab.txt
scrapping/notebooks/: llm_training.ipynb
scrapping/src/: main.py  scraper.py  storage.py
(+1 files in other folders)
