[tool.poetry]
name = "adlamandnko"
version = "0.1.0"
description = "Website for Adlam and N'ko languages annotation"
authors = ["Boubacar, <boubasow.pro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
django-bootstrap-themes = "^3.3.6"
tree = "^0.2.4"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.10"
keyboard = "^0.13.5"
python-dotenv = "^1.0.1"
str2bool = "^1.1"
django-theme-material-kit = "^1.0.19"
whitenoise = "^6.7.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
